<resources>
    <string name="app_name_dev">MoviesApp(Dev)</string>
    <string name="app_name_prod">MoviesApp</string>
    <string name="app_name_staging">MoviesApp (Staging) </string>
    <string name="toolbar_title">Discover</string>
    <string name="movie_title">Westworld</string>
    <string name="vote_count">760</string>
    <string name="best_popular_films_and_serials">BEST POPULAR FILMS AND SERIALS</string>
    <string name="check_movie_showtimes">Check Movie\nShowtimes</string>
    <string name="see_more">SEE MORE</string>
    <string name="actor_name">Jack Kathalin</string>
    <string name="you_like_18_movies">YOU LIKE 18 MOVIES</string>
    <string name="showcases">SHOWCASES</string>
    <string name="more_actors">MORE ACTORS</string>
    <string name="best_actors">BEST ACTORS</string>
    <string name="more_creators">MORE CREATORS</string>
    <string name="creators">CREATORS</string>
    <string name="play_trailer">PLAY TRAILER</string>
    <string name="rate_movie">RATE MOVIE</string>
    <string name="storyline">Bruce Nolan toils as a \'human interest\' television reporter in Buffalo, N.Y., but despite his high ratings and the love of his beautiful girlfriend</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actors">ACTORS</string>
    <string name="about_flim">ABOUT FLIM</string>
    <string name="original_title">Original Title</string>
    <string name="type">Type</string>
    <string name="family_adventure">Family, Adventure</string>
    <string name="production">Production</string>
    <string name="united_kingdom_usa">United Kingdom, USA</string>
    <string name="premiere">Premiere</string>
    <string name="_8_november_2016_world">8 November 2016 ( World )</string>
    <string name="description">Description</string>
    <string name="the_film_begins_in_1926_the_film_begins_in_1926_the_film_begins_in_1926_the_film_begins_in_1926_the_film_begins_in_1926_the_film_begins_in_1926_the_film_begins_in_1926">The film begins in 1926. The film begins in 1926. The film begins in 1926. The film begins in 1926. The film begins in 1926. The film begins in 1926. The film begins in 1926.</string>
</resources>