<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rlToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:src="@drawable/ic_baseline_menu_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/toolbar_color"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_alignTop="@id/btnBack"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:text="@string/toolbar_title"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_alignParentEnd="true"
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_alignTop="@id/btnBack"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:src="@drawable/ic_baseline_search_24"/>

            </RelativeLayout>

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/rlToolbar"
                app:sliderAnimationDuration="1000"
                app:sliderAutoCycleDirection="right"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="1000"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderScrollTimeInSec="3"
                app:sliderStartAutoCycle="true" />

            <RelativeLayout
                android:id="@+id/rlPopularMoive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageSlider"
                android:layout_marginStart="@dimen/margin_medium_2">

                <TextView
                    android:id="@+id/tvBestPopular"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginStart="@dimen/margin_card_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/GrayText"
                    android:text="@string/best_popular_films_and_serials"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularMovies"
                    android:layout_below="@id/tvBestPopular"
                    android:padding="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardShowTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/show_time_card_height"
                app:cardBackgroundColor="@color/show_time_background_color"
                android:layout_below="@id/rlPopularMoive"
                android:layout_margin="@dimen/margin_medium_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_medium_2"
                    android:weightSum="5.5">

                    <TextView
                        android:id="@+id/tvShowTimes"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="4.2"
                        android:text="@string/check_movie_showtimes"
                        style="@style/WhiteText.Large"
                        android:lineSpacingMultiplier="1"/>

                    <ImageView
                        android:layout_width="@dimen/margin_xxlarge"
                        android:layout_height="@dimen/margin_xxlarge"
                        android:layout_gravity="end"
                        android:layout_weight="0.3"
                        android:src="@drawable/ic_baseline_location_on_24"/>

                    <TextView
                        android:id="@+id/tvSeeMore"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/see_more"
                        android:textColor="@color/rating_color"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="@dimen/line_width"
                        android:layout_height="@dimen/margin_small"
                        android:background="@color/rating_color"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rlGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardShowTime"
                android:background="@color/background_color"
                android:layout_marginStart="@dimen/margin_medium_2">

                <com.google.android.material.tabs.TabLayout
                    android:background="@color/background_color"
                    android:id="@+id/tabGenre"
                    app:tabMode="scrollable"
                    app:tabTextColor="@android:color/darker_gray"
                    app:tabSelectedTextColor="@android:color/white"
                    app:tabIndicatorColor="@color/rating_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerMovie"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_below="@id/tabGenre"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_height="@dimen/viewpager_height" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlShowCases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlGenres"
                android:background="@color/show_time_background_color">

                <TextView
                    android:id="@+id/tvBestShowcases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showcases"
                    android:layout_margin="@dimen/margin_medium_3"
                    style="@style/GrayText"/>

                <TextView
                    android:id="@+id/tvMoreShowcases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/tvBestShowcases"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:text="MORE SHOWCASES"
                    style="@style/WhiteText"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_small"
                    android:layout_alignStart="@id/tvMoreShowcases"
                    android:layout_alignBottom="@id/tvMoreShowcases"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:background="@android:color/white"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShowCases"
                    android:padding="@dimen/margin_medium"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!--<View
                    android:layout_width="@dimen/line_width"
                    android:layout_height="@dimen/margin_small"
                    android:background="@android:color/white"/>-->

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlShowCases"
                android:background="@color/chip_background">

                <TextView
                    android:id="@+id/tvActors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_actors"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    style="@style/GrayText"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvActors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="@dimen/margin_medium_2"/>

            </RelativeLayout>

        </RelativeLayout>








    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>